Arreglo problema en build que no permitias correr sbt run, problema en los de compilacion de java